--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -6,6 +6,10 @@
   margin-top: 25px;
   padding-bottom: 30px;
 }
+.navbar-toggler {
+  position: fixed;
+  right: 19px;
+}
 
 #frontpage .offcanvas-end {
   width: 250px;
@@ -13,7 +17,7 @@
 #frontpage .main-heading {
   color: white;
   font-family: "Clash Display", sans-serif;
-  font-size: 5.6rem;
+  font-size: 6rem;
   margin-bottom: 10px;
   font-weight: bold;
 }
@@ -54,6 +58,10 @@
   #frontpage .top-sec {
     width: 200px;
     margin-left: 30px;
+  }
+
+  #frontpage {
+    margin-left: 90px;
   }
 }
 
@@ -114,16 +122,6 @@
   background-color: rgb(0, 0, 0);
 }
 
-#frontpage .Navbar-List {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 50%;
-}
-
-#frontpage .Navbar-List a {
-  text-decoration: none;
-}
 #frontpage .top {
   display: flex;
   flex-direction: row;
